--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@
           <div class="carousel-inner" role="listbox">
 
             <div class="carousel-item active">
-              <img class="d-block w-100" src="images/chuvas-nova-friburgo-rio-janeiro-20110112-original1.jpeg" alt="Chuvas" style="width:100%;">
+              <img class="d-block w-100" src="images/chuvas-nova-friburgo-1.png" alt="Chuvas" style="width:100%;">
               <div class="carousel-caption d-none d-md-block">
-                <!-- <h1>Queimadas</h1> -->
-                <!-- <p>This is a description for the first slide.</p> -->
+                <!-- <h2>Chuvas Nova Friburgo</h2> -->
+                <!-- <h5>Deslizamento de terra nos morros em Teresópolis (RJ) após as fortes chuvas - 12/01/2011 (Antonio Lacerda/EFE/VEJA)</h5> -->
               </div>
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/enchente.jpg" alt="Enchentes" style="width:100%;">
+              <img class="d-block w-100" src="images/enchente-2.png" alt="Enchentes" style="width:100%;">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Raios</h1> -->
                 <!--  <p>This is a description for the second slide.</p> -->
@@ -131,7 +131,7 @@
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/Estiagem_seca.jpg" alt="Imagem de Inundações" style="width:100%;">
+              <img class="d-block w-100" src="images/Estiagem_seca-4.png" alt="Imagem de Inundações" style="width:100%;">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Inundações</h1> -->
                 <!-- <p>This is a description for the third slide.</p> -->
@@ -139,7 +139,7 @@
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/poluicao_ar.jpg" alt="Poluição" style="width:100%;">
+              <img class="d-block w-100" src="images/poluicao_ar-5.png" alt="Poluição" style="width:100%;">
               <div class="carousel-caption d-none d-md-block">
                <!--  <h1>Third Slide</h1> -->
                <!-- <p>This is a description for the third slide.</p>--> 
@@ -147,7 +147,7 @@
            </div>
 
            <div class="carousel-item">
-            <img class="d-block w-100" src="images/Toxic_Foam_lead.jpg" alt="Espuma tóxica" style="width:100%;">
+            <img class="d-block w-100" src="images/espuma-3.png" alt="Espuma tóxica" style="width:100%;">
             <div class="carousel-caption d-none d-md-block">
              <!--  <h1>Third Slide</h1> -->
              <!-- <p>This is a description for the third slide.</p>--> 
