--- a/presentation.html
+++ b/presentation.html
@@ -120,7 +120,7 @@
         <div class="bs-callout bs-callout-warning">
 
           <ul>
-            <li><p><a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:02_introducao_terrama2.pdf" target="_blank"><b>Apresentação do Sistema</b></a></p></li>
+            <li><p><a href="docs/documentation/02_introducao_terrama2.pdf" target="_blank"><b>Apresentação do Sistema</b></a></p></li>
            
           </ul>
           
