--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <meta property="creator.productor" content="http://estruturaorganizacional.dados.gov.br/id/unidade-organizacional/49020"/>
 
-  <title>TerraMA² · Documentação</title>
+  <title>TerraMA² · Publicações</title>
   <link href="img/terrama2_logo_100dpi.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 
   <!-- Bootstrap core CSS -->
@@ -104,7 +104,7 @@
       <div class="container">
 
         <!-- Page Heading/Breadcrumbs -->
-        <h1 class="mt-4 mb-3">Documentação
+        <h1 class="mt-4 mb-3">Publicações
           <small>TerraMA²</small>
         </h1>
 
