--- a/courses.html
+++ b/courses.html
@@ -133,14 +133,14 @@
                 <p><b>Data:</b> 9 a 11 de outubro de 2017</p>
                 <p><b>Local:</b> INPE - SJC</p>
                 <p><b>Instrutores:</b> Eymar Lopes, Fabiano Morelli e Gilberto Queiroz</p>
-                <p>Dado UF <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=download:ibge.zip">ibge.zip</a></p> 
+                <p>Dado UF <a href="docs/documentation/cursos/ibge.zip">ibge.zip</a></p> 
 
                 <h5>Slides do Curso</h5>
                 <ul>
-                  <li>Instalação da plataforma TerraMA2 <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:01_instalacao_terrama2.pdf" target="_blank">01_instalacao_terrama2.pdf</a></li>
-                  <li>Apresentação da plataforma TerraMA2 <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:02_introducao_terrama2.pdf" target="_blank">02_introducao_terrama2.pdf</a></li>
-                  <li>Analise <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:06_analise_terrama2.pdf" target="_blank">06_analise_terrama2.pdf</a></li>
-                  <li>Operadores <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:operadores_terrama2.pdf" target="_blank">operadores_terrama2.pdf</a></li>
+                  <li>Instalação da plataforma TerraMA2 <a href="docs/documentation/cursos/01_instalacao_terrama2.pdf" target="_blank">01_instalacao_terrama2.pdf</a></li>
+                  <li>Apresentação da plataforma TerraMA2 <a href="docs/documentation/cursos/02_introducao_terrama2.pdf" target="_blank">02_introducao_terrama2.pdf</a></li>
+                  <li>Analise <a href="docs/documentation/cursos/06_analise_terrama2.pdf" target="_blank">06_analise_terrama2.pdf</a></li>
+                  <li>Operadores <a href="docs/documentation/cursos/operadores_terrama2.pdf" target="_blank">operadores_terrama2.pdf</a></li>
                 </ul> 
                 
               </div>
