--- a/guide.html
+++ b/guide.html
@@ -121,7 +121,7 @@
           <h5>Linux</h5>
           <ul>
             <li><p><a href="docs/download/manual_instalacao_terrama2_rc1.pdf" target="_blank"><b>Manual de Instalação do TerraMA² - Release 4.0 RC1</b></a></p></li>
-            <li><p><a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=download:linux:manual_instalacao_terrama2_rc2.txt.zip" target="_blank"><b>Manual de Instalação do TerraMA² - Release 4.0 RC2</b></a></p></li>
+            <li><p><a href="docs/download/manual_instalacao_terrama2_rc2.txt.zip" target="_blank"><b>Manual de Instalação do TerraMA² - Release 4.0 RC2</b></a></p></li>
           </ul>
           
           <!-- <a href="docs/documentation/02_introducao_terrama2.pdf" target="_blank">Apresentação do Sistema</a> -->
