--- a/team.html
+++ b/team.html
@@ -133,6 +133,7 @@
                 <div class="col-lg-4 mb-4">
                   <div class="card h-100 text-center">
                     <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
+                    <!-- <img src="img/terrama2_logo_100dpi.png" class="img-circle" alt="Cinque Terre"> -->
                     <div class="card-body">
                       <h4 class="card-title"><a href="http://lattes.cnpq.br/9390361877489668" target="_blank">Eymar Silva Sampaio Lopes</a></h4>
                     </div>
