--- a/team.html
+++ b/team.html
@@ -131,8 +131,8 @@
               <!-- Team -->
               <div class="row">
                 <div class="col-lg-4 mb-4">
-                  <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
+                  <div class="card h-40 text-center">
+                    <!-- <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica"> -->
                     <!-- <img src="img/terrama2_logo_100dpi.png" class="img-circle" alt="Cinque Terre"> -->
                     <div class="card-body">
                       <h4 class="card-title"><a href="http://lattes.cnpq.br/9390361877489668" target="_blank">Eymar Silva Sampaio Lopes</a></h4>
@@ -144,8 +144,8 @@
                 </div>
 
                 <div class="col-lg-4 mb-4">
-                  <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
+                  <div class="card h-40 text-center">
+                    <!-- <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica"> -->
                     <div class="card-body">
                       <h4 class="card-title"><a href="http://lattes.cnpq.br/9981634193003068" target="_blank">Gilberto Ribeiro de Queiroz</a></h4>
                     </div>
@@ -156,7 +156,7 @@
                 </div>
 
                 <!-- <div class="col-lg-4 mb-4">
-                  <div class="card h-100 text-center">
+                  <div class="card h-100  text-center">
                     <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
                     <div class="card-body">
                       <h4 class="card-title"><a href="http://lattes.cnpq.br/0983590211329242" target="_blank">Laércio Massaru Namikawa</a></h4>
@@ -168,8 +168,8 @@
                 </div> -->
 
                 <div class="col-lg-4 mb-4">
-                  <div class="card h-100 text-center">
-                    <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica">
+                  <div class="card h-60 text-center">
+                    <!-- <img class="card-img-top" src="http://placehold.it/750x450" alt="Imagem Genérica"> -->
                     <div class="card-body">
                       <h4 class="card-title"><a href="#">Fabiano Morelli</a></h4>
                     </div>
