--- a/download.html
+++ b/download.html
@@ -190,7 +190,7 @@
           <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
             <div class="card-body">
               
-              <p><b>Versão Corrente</b></p>
+              <p><b>Versão atual</b></p>
               <ul>
                 <li>
                   <a href="docs/download/terrama2-4.0.0-rc2-linux-x64-ubuntu-16.04.deb"><b>Download Release 4.0 - RC2</b></a>
@@ -233,7 +233,7 @@
           <div id="collapseTw" class="collapse show" role="tabpanel" aria-labelledby="headingTw" data-parent="#accordion">
             <div class="card-body">
               
-              <p><b>Versão Corrente</b></p>
+              <p><b>Versão atual</b></p>
               <ul>
                 <li>
                   Download Release 4.0 64 bits<a href="" title="Em Breve!"><b></b></a>
