--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             <div class="carousel-item active">
               <img class="d-block w-100" src="images/chuvas-nova-friburgo-1.png" alt="Chuvas" style="width:100%;">
               <div class="carousel-caption d-none d-md-block">
-                <!-- <h2>Chuvas Nova Friburgo</h2> -->
-                <!-- <h5>Deslizamento de terra nos morros em Teresópolis (RJ) após as fortes chuvas - 12/01/2011 (Antonio Lacerda/EFE/VEJA)</h5> -->
+                <!-- <h3>Chuvas Nova Friburgo</h3> -->
+                <h5>Foto: Antonio Lacerda</h5>
               </div>
             </div>
 
@@ -127,14 +127,16 @@
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Raios</h1> -->
                 <!--  <p>This is a description for the second slide.</p> -->
+                <h5>Enchente | Ilustração</h5>
               </div>
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/Estiagem_seca-4.png" alt="Imagem de Inundações" style="width:100%;">
+              <img class="d-block w-100" src="images/Estiagem_seca-4.png" alt="Estiagem" style="width:100%;">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Inundações</h1> -->
                 <!-- <p>This is a description for the third slide.</p> -->
+                <h5>Estiagem</h5>
               </div>
             </div>
 
@@ -142,7 +144,8 @@
               <img class="d-block w-100" src="images/poluicao_ar-5.png" alt="Poluição" style="width:100%;">
               <div class="carousel-caption d-none d-md-block">
                <!--  <h1>Third Slide</h1> -->
-               <!-- <p>This is a description for the third slide.</p>--> 
+               <!-- <p>This is a description for the third slide.</p>-->
+               <h5>Foto: Climatempo</h5>
              </div>
            </div>
 
@@ -150,7 +153,8 @@
             <img class="d-block w-100" src="images/espuma-3.png" alt="Espuma tóxica" style="width:100%;">
             <div class="carousel-caption d-none d-md-block">
              <!--  <h1>Third Slide</h1> -->
-             <!-- <p>This is a description for the third slide.</p>--> 
+             <!-- <p>This is a description for the third slide.</p>-->
+             <h5>Foto: Rafael Pacheco</h5> 
            </div>
          </div>
        </div>
