--- a/download.html
+++ b/download.html
@@ -148,7 +148,7 @@
 
                   <!-- win -->       
                   <div class="col">
-                    <a href="#win" title="Em breve!"><img src="img/win-icon.png" class="rounded mx-auto d-block" alt="download windows" width="300" height="210"></a>
+                    <a href="#win" title="Em breve!"><img src="img/win-icon.png" class="img-fluid" alt="download windows" width="300" height="210"></a>
 
                     <center><span> <a href="#"></a>Outros downloads | <a href="#"></a>Documentação </span></center>
                   </div>
@@ -157,7 +157,7 @@
                   <!-- linux -->
                   <div class="col">
 
-                    <a href="#linux"><img src="img/linux-icon.png" class="rounded mx-auto d-block" alt="download linux" width="300" height="210"></a>
+                    <a href="#linux"><img src="img/linux-icon.png" class="img-fluid" alt="download linux" width="300" height="210"></a>
                     
                     <center><span><a href="https://github.com/TerraMA2/terrama2/releases" target="_blank">Outros downloads</a> | <a href="docs/download/manual_instalacao_terrama2_rc2.txt.zip">Documentação</a></span></center>
                   </div>
