--- a/index.html
+++ b/index.html
@@ -110,11 +110,29 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
           </ol>
 
           <div class="carousel-inner" role="listbox">
 
             <div class="carousel-item active">
+              <img class="d-block w-100" src="images/wildfire.png" alt="Chuvas" style="width:100%;">
+              <div class="carousel-caption d-none d-md-block">
+                <!-- <h3>Chuvas Nova Friburgo</h3> -->
+                <h5>Foto: Mike McMillan</h5>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <img class="d-block w-100" src="images/storm.png" alt="Chuvas" style="width:100%;">
+              <div class="carousel-caption d-none d-md-block">
+                <!-- <h3>Chuvas Nova Friburgo</h3> -->
+                <h5>Raio | Ilustração</h5>
+              </div>
+            </div>
+
+            <div class="carousel-item">
               <img class="d-block w-100" src="images/chuvas-nova-friburgo-1.png" alt="Chuvas" style="width:100%;">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h3>Chuvas Nova Friburgo</h3> -->
