--- a/download.html
+++ b/download.html
@@ -201,6 +201,9 @@
               <ul>
                 <li>
                   <a href="docs/download/terrama2-4.0.0-rc2-linux-x64-ubuntu-16.04.deb"><b>Download Release 4.0 - RC2</b></a>
+                  <!-- <a href="download.php?f=docs/download/terrama2-4.0.0-rc2-linux-x64-ubuntu-16.04.deb">Download Release 4.0 - RC2</a> -->
+                  <!-- <a href="docs/download/terrama2-4.0.0-rc2-linux-x64-ubuntu-16.04.deb?f=count.php"><b>Download Release 4.0 - RC2</b></a> -->
+                  <a href="docs/download/count.php"><b>Download Release 4.0 - RC2</b></a>
                 </li>
               </ul>
 
