correcting emails (team)

--- a/team.html
+++ b/team.html
@@ -14,6 +14,7 @@
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/email.css">
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
@@ -138,7 +139,8 @@
                       <h4 class="card-title"><a href="http://lattes.cnpq.br/9390361877489668" target="_blank">Eymar Silva Sampaio Lopes</a></h4>
                     </div>
                     <div class="card-footer">
-                      <img src="img/eymar-email.png" width="170" height="14">
+                      <!-- <img src="img/eymar-email.png" width="170" height="14"> -->
+                      <address class="inpe">eymar.lopes</address>
                     </div>
                   </div>
                 </div>
@@ -150,7 +152,8 @@
                       <h4 class="card-title"><a href="http://lattes.cnpq.br/9981634193003068" target="_blank">Gilberto Ribeiro de Queiroz</a></h4>
                     </div>
                     <div class="card-footer">
-                      <img src="img/gilberto-email.png" width="170" height="14">
+                      <!-- <img src="img/gilberto-email.png" width="170" height="14"> -->
+                      <address class="inpe">gilberto.queiroz</address>
                     </div>
                   </div>
                 </div>
@@ -162,7 +165,8 @@
                       <h4 class="card-title"><a href="#">Fabiano Morelli</a></h4>
                     </div>
                     <div class="card-footer">
-                      <img src="img/fabiano-email.png" width="170" height="14">
+                      <!-- <img src="img/fabiano-email.png" width="170" height="14"> -->
+                      <address class="inpe">fabiano.morelli</address>
                     </div>
                   </div>
                 </div>
