adding tag google analytics

--- a/download.html
+++ b/download.html
@@ -22,6 +22,17 @@
   h5{text-align:center;}
 </style>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110170696-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110170696-1');
+</script>
+
+
 </head>
 
 <body>
@@ -203,7 +214,7 @@
                   <a href="docs/download/terrama2-4.0.0-rc2-linux-x64-ubuntu-16.04.deb"><b>Download Release 4.0 - RC2</b></a>
                   <!-- <a href="download.php?f=docs/download/terrama2-4.0.0-rc2-linux-x64-ubuntu-16.04.deb">Download Release 4.0 - RC2</a> -->
                   <!-- <a href="docs/download/terrama2-4.0.0-rc2-linux-x64-ubuntu-16.04.deb?f=count.php"><b>Download Release 4.0 - RC2</b></a> -->
-                  <a href="docs/download/count.php"><b>Download Release 4.0 - RC2</b></a>
+                  <a href="docs/download/count.php?file=terrama2-4.0.0-rc2-linux-x64-ubuntu-16.04.deb"><b>Download Release 4.0 - RC2</b></a>
                 </li>
               </ul>
 
