--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
 
           <!-- Logo -->
-          <a href="index.html" title="Home"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logotipo do TerraMa2"></a>
+          <a href="index.html" title="Home"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logotipo do TerraMa2"></a> 
 
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -163,97 +163,103 @@
             <img class="d-block w-100" src="images/espuma-3.png" alt="Espuma tóxica" style="width:100%;">
             <div class="carousel-caption d-none d-md-block">
               <h5>Foto: Rafael Pacheco</h5> 
-           </div>
-         </div>
-       </div>
+            </div>
+          </div>
+        </div>
 
-       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
 
+      </div>
+    </header>
+    <!-- /.Carousel -->
+
+    <!-- Jumbotron -->
+    <div class="jumbotron">
+
+      <!-- Container -->
+      <div class="container">
+
+        <h1 class="my-4">Plataforma de monitoramento, análise e alerta a extremos ambientais.</h1>
+
+        <p>A plataforma computacional TerraMA² foi planejada dentro da linha de produtos de base tecnológica inovadora, no domínio de softwares abertos, com extensivo uso de nossa biblioteca geográfica TerraLib, além de atender uma demanda crescente de aplicações de monitoramento, análise e alerta em áreas como qualidade do ar, qualidade da água, gasodutos, barragens de rejeito em área de mineração, incêndios florestais, movimentos de massa do tipo escorregamentos e corridas de lama, enchentes e estiagens.</p>
+        <a class="btn btn-outline-warning" href="about.html">Saiba mais 
+          <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+      </div>
+      <!-- /.Container -->
     </div>
-  </header>
-  <!-- /.Carousel -->
-
-  <!-- Jumbotron -->
-  <div class="jumbotron">
+    <!-- /.Jumbotron -->
 
     <!-- Container -->
     <div class="container">
+      <h1 class="my-4">Notícias</h1><br>
 
-      <h1 class="my-4">Plataforma de monitoramento, análise e alerta a extremos ambientais.</h1>
+      <!-- Section one -->
+      <section>
 
-      <p>A plataforma computacional TerraMA² foi planejada dentro da linha de produtos de base tecnológica inovadora, no domínio de softwares abertos, com extensivo uso de nossa biblioteca geográfica TerraLib, além de atender uma demanda crescente de aplicações de monitoramento, análise e alerta em áreas como qualidade do ar, qualidade da água, gasodutos, barragens de rejeito em área de mineração, incêndios florestais, movimentos de massa do tipo escorregamentos e corridas de lama, enchentes e estiagens.</p>
-      <a class="btn btn-outline-warning" href="about.html">Saiba mais 
-        <span class="glyphicon glyphicon-chevron-right"></span>
-      </a>
-    </div>
-    <!-- /.Container -->
-  </div>
-  <!-- /.Jumbotron -->
+        <!-- Item Row -->
+        <div class="row">
+          <div class="col-md-6">
+            <figure class="figure">
+              <img src="images/selection_001.png" class="figure-img img-fluid rounded" alt="Aplicação Web do projeto TerraMa2">
+              <figcaption class="figure-caption">Aplicação Web TerraMA²</figcaption>
+            </figure>
+          </div>
 
-  <!-- Container -->
-  <div class="container">
-    <h1 class="my-4">Notícias</h1><br>
+          <div class="col-md-6">
 
-    <!-- Section one -->
-    <section>
+            <h3 class="my-3">TerraMA² versão 4.0 - ALPHA 1 <a href="new-one.html"><span class="badge badge-primary">New</span></a></h3>
+            <p>A plataforma TerraMA² necessita de inovações que atenda as aplicações diversas. Nesse sentido, estamos passando por uma reestruturação grande na base de nosso produto.</p>
 
-      <!-- Item Row -->
-      <div class="row">
-        <div class="col-md-6">
-          <figure class="figure">
-            <img src="images/selection_001.png" class="figure-img img-fluid rounded" alt="Aplicação Web do projeto TerraMa2">
-            <figcaption class="figure-caption">Aplicação Web TerraMA²</figcaption>
-          </figure>
+            <a class="btn btn-outline-warning" href="new-one.html">Saiba mais</a>
+          </div>
+
+        </div><br>
+        <!-- /.Item Row -->
+      </section>
+      <!-- /.Section one -->
+
+      <hr>
+
+      <!-- Section two -->
+      <section>
+        <!-- Item Row -->
+        <div class="row">
+
+          <div class="col-md-12">
+            <h3 class="my-3">Novidades e Melhorias na versão 3</h3>
+            <p>A nova versão do TerraMA² (antigo SISMADEN) têm as seguintes funcionalidade e melhorias:</p>
+
+            <ul>
+              <li>
+                <b>Coleta de dados pontuais em diferentes localizações:</b>
+                <p>Além da coleta de dados de pontos fixos como PCD (Plataforma de Coleta de Dados) será possível coletar dados relacionados a ocorrência de fenômenos pontuais em diferentes localizações, tais como: focos de calor (incêndios), epidemias, doenças em culturas, etc. Além da localização dos pontos (latitude / longitude) e da data/hora de ocorrência, outros atributos poderão estar associados à ocorrência.</p>
+              </li>
+              <li>
+                <b>Pré-processamento sobre dados pontuais em diferentes localizações:</b>
+                <p>Ao inserir uma ocorrência no banco, será possivel configurar a intersecção espacial do ponto com vários planos vetoriais ou matriciais, armazenando o resultado na forma de atributo do ponto. No caso de cruzamento do ponto com planos vetoriais de polígonos, em havendo intersecção espacial, deve-se permitir escolher um ou mais atributos do polígono que serão transferidos para o ponto. No caso de cruzamento do ponto com um plano matricial (imagem ou grades numéricas) deve recuperar o valor do plano matricial e armazenar seu valor em um atributo associado ao ponto. Este pré-processamento deverá ser configurado no momento de inserção do ponto no banco de dados, como uma regra de coleta de dado definida pelo usuário...</p>
+              </li>
+            </ul>
+
+            <a class="btn btn-outline-warning" href="new-two.html">Saiba mais</a>
+          </div>
         </div>
+        <!-- /.Item Row -->
+      </section><br>
+      <!-- /.Section two -->
 
-        <div class="col-md-6">
-
-          <h3 class="my-3">TerraMA² versão 4.0 - ALPHA 1 <a href="new-one.html"><span class="badge badge-primary">New</span></a></h3>
-          <p>A plataforma TerraMA² necessita de inovações que atenda as aplicações diversas. Nesse sentido, estamos passando por uma reestruturação grande na base de nosso produto.</p>
-
-          <a class="btn btn-outline-warning" href="new-one.html">Saiba mais</a>
-        </div>
-
-      </div><br>
-      <!-- /.Item Row -->
-    </section>
-    <!-- /.Section one -->
-
-    <hr>
-
-    <!-- Section two -->
-    <section>
-      <!-- Item Row -->
-      <div class="row">
-
-        <div class="col-md-12">
-          <h3 class="my-3">Novidades e Melhorias na versão 3</h3>
-          <p>A nova versão do TerraMA² (antigo SISMADEN) têm as seguintes funcionalidade e melhorias:</p>
-
-          <ul>
-            <li>
-              <b>Coleta de dados pontuais em diferentes localizações:</b>
-              <p>Além da coleta de dados de pontos fixos como PCD (Plataforma de Coleta de Dados) será possível coletar dados relacionados a ocorrência de fenômenos pontuais em diferentes localizações, tais como: focos de calor (incêndios), epidemias, doenças em culturas, etc. Além da localização dos pontos (latitude / longitude) e da data/hora de ocorrência, outros atributos poderão estar associados à ocorrência.</p>
-            </li>
-            <li>
-              <b>Pré-processamento sobre dados pontuais em diferentes localizações:</b>
-              <p>Ao inserir uma ocorrência no banco, será possivel configurar a intersecção espacial do ponto com vários planos vetoriais ou matriciais, armazenando o resultado na forma de atributo do ponto. No caso de cruzamento do ponto com planos vetoriais de polígonos, em havendo intersecção espacial, deve-se permitir escolher um ou mais atributos do polígono que serão transferidos para o ponto. No caso de cruzamento do ponto com um plano matricial (imagem ou grades numéricas) deve recuperar o valor do plano matricial e armazenar seu valor em um atributo associado ao ponto. Este pré-processamento deverá ser configurado no momento de inserção do ponto no banco de dados, como uma regra de coleta de dado definida pelo usuário...</p>
-            </li>
-          </ul>
-
-          <a class="btn btn-outline-warning" href="new-two.html">Saiba mais</a>
-        </div>
+      <div class="row"><div class="col"></div><div class="col"></div>
+      <div class="col" align="right">
+        <!-- <script type="text/javascript" src="https://usuariosonline.s12.com.br/uo-7862Zw1A5Cy750dA-14-0.js"></script> --><!-- <br><a href="https://usuariosonline.s12.com.br/" target="_blank"><img src="https://usuariosonline.s12.com.br/selo/selo-uo.gif" alt="Usuários On-line" border="0"></a> -->
       </div>
-      <!-- /.Item Row -->
-    </section><br>
-    <!-- /.Section two -->
+    </div><br>
 
   </div>
   <!-- /.Container -->
@@ -303,7 +309,7 @@
                 <li><a href="#">Videos</a></li>
               </ul>
             </div>
-            
+
           </div>
           <div class="col-6 col-md-4">
             <!--Column1-->
