--- a/team.html
+++ b/team.html
@@ -182,6 +182,135 @@
       </div>
       <!-- /.Collapse -->
 
+
+      <!-- Test p site TerraAmazon -->
+      <!-- Collapse -->
+      <div class="mb-4" id="accordion01" role="tablist" aria-multiselectable="true">
+
+        <div class="card">
+          <div class="card-header" role="tab" id="headingOne">
+            <h5 class="mb-0">
+              <a data-toggle="collapse" data-parent="#accordion01" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Coordenação</a>
+            </h5>
+          </div>
+
+          <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
+            <div class="card-body">
+
+              <div class="row">
+                <div class="col">
+                  <!-- <div class="card card-inverse bg-inverse">
+                    <div class="card-block">
+                      <h3 class="card-title">1</h3>
+                      <p class="card-text">With supporting text below..</p>
+                      <a href="#" class="btn btn-outline-secondary">Outline</a>
+                    </div>
+                  </div> -->
+
+                  <div class="card h-40 text-center">
+                    <div class="card-body">
+                      <img src="#" class="rounded mx-auto d-block" alt="..."><br>
+                      <h4 class="card-title"><a href="#" target="_blank">Nome 1</a></h4>
+                    </div>
+                    <!-- <div class="card-footer">
+                      <address class="inpe">eymar.lopes</address>
+                    </div> -->
+                  </div>
+
+
+                </div>
+                <div class="col">
+                  <!-- <div class="card card-inverse bg-inverse">
+                    <div class="card-block">
+                      <h3 class="card-title">2</h3>
+                      <p class="card-text">With supporting text below..</p>
+                      <a href="#" class="btn btn-outline-secondary">Outline</a>
+                    </div>
+                  </div> -->
+
+                  <div class="card h-40 text-center">
+                    <div class="card-body">
+                      <img src="#" class="rounded mx-auto d-block" alt="..."><br>
+                      <h4 class="card-title"><a href="#" target="_blank">Nome 2</a></h4>
+                    </div>
+                    <!-- <div class="card-footer">
+                      <address class="inpe">eymar.lopes</address>
+                    </div> -->
+                  </div>
+
+                </div>
+                <div class="col">
+                  <!-- <div class="card card-inverse bg-inverse">
+                    <div class="card-block">
+                      <h3 class="card-title">3</h3>
+                      <p class="card-text">With supporting text below..</p>
+                      <a href="#" class="btn btn-outline-secondary">Outline</a>
+                    </div>
+                  </div> -->
+
+                  <div class="card h-40 text-center">
+                    <div class="card-body">
+                      <img src="#" class="rounded mx-auto d-block" alt="..."><br>
+                      <h4 class="card-title"><a href="#" target="_blank">Nome 3</a></h4>
+                    </div>
+                    <!-- <div class="card-footer">
+                      <address class="inpe">eymar.lopes</address>
+                    </div> -->
+                  </div>
+
+                </div>
+                <div class="col">
+                  <!-- <div class="card card-inverse bg-inverse">
+                    <div class="card-block">
+                      <h3 class="card-title">4</h3>
+                      <p class="card-text">With supporting text below..</p>
+                      <a href="#" class="btn btn-outline-secondary">Outline</a>
+                    </div>
+                  </div> -->
+
+                  <div class="card h-40 text-center">
+                    <div class="card-body">
+                      <img src="#" class="rounded mx-auto d-block" alt="..."><br>
+                      <h4 class="card-title"><a href="#" target="_blank">Nome 4</a></h4>
+                    </div>
+                    <!-- <div class="card-footer">
+                      <address class="inpe">eymar.lopes</address>
+                    </div> -->
+                  </div>
+
+                </div>
+                <div class="col">
+                  <!-- <div class="card card-inverse bg-inverse">
+                    <div class="card-block">
+                      <h3 class="card-title">5</h3>
+                      <p class="card-text">With supporting text below..</p>
+                      <a href="#" class="btn btn-outline-secondary">Outline</a>
+                    </div>
+                  </div> -->
+
+                  <div class="card h-40 text-center">
+                    <div class="card-body">
+                      <img src="#" class="rounded mx-auto d-block" alt="..."><br>
+                      <h4 class="card-title"><a href="#" target="_blank">Nome 1</a></h4>
+                    </div>
+                    <!-- <div class="card-footer">
+                      <address class="inpe">eymar.lopes</address>
+                    </div> -->
+                  </div>
+
+                </div>
+
+                <!-- /.Team -->
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+        <!-- /.Collapse -->
+
+
+
         <!-- Collapse -->
         <div class="mb-4" id="accordion02" role="tablist" aria-multiselectable="true">
 
